Small fix to make sure it doesn't get stuck in title

--- a/src/less/page/page-work.less
+++ b/src/less/page/page-work.less
@@ -123,11 +123,6 @@ section.work .default-content {
 
 @media screen and (max-width: 1164px) {
   .work .work-return {
-    position: absolute;
-  }
-  
-  .work .work-container h4 {
-    margin-left: 64px !important;
   }
   
   .work .work-return svg {
